made the text smaller

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,9 @@
     <a href="{{ url_for('student', id=student[0]) }}">
       <div class="w3-card-4">   
           <img src="{{ student[2] }}" alt="{{ student[1] }}">
-          <h2> {{ student[1] }}</h2>
+          <div class="info">
+            <h3> {{ student[1] }}</h3>
+          </div>
       </div>
     </a>
     {% endfor %}
