added a font called Poppins to all letters

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Don't forget to link css to html and add the w3.css-->
+    <!-- Don't forget to link css to html and add the w3.css and the font-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
