--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+body,h1,h2,h3,h4,h5,h6 {font-family: Poppins, sans-serif;}
+
 .six-column {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
