--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: Poppins, sans-serif;}
     padding: 1em;
 }
 
-.w3-card-4 {
+.six-column .w3-card-4 {
     width: auto;
     height: auto;
     display: flex;
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: Poppins, sans-serif;}
     justify-content: center;
 }
 
-.w3-card-4 img {
+.six-column .w3-card-4 img {
     width: auto;
     height: auto;
     max-width: 100%;
@@ -24,18 +24,37 @@ body,h1,h2,h3,h4,h5,h6 {font-family: Poppins, sans-serif;}
 }
 
 
-
 .two-column {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20em;
+    grid-template-columns: 1fr 2fr; /* Make the right column smaller */
+    gap: 1em;
     padding: 1em;
 }
 
-.two-column img {
-    width: 65%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    align-self: center;
+.two-column .w3-card-4 {
+    position: relative;
+    width: auto; /* Keep the card size unchanged */
+    height: 100%;
+    
 }
+
+.two-column .w3-card-4 img {
+    display: block;
+    max-width: 100%;
+    max-height: 70%; /* Maintain aspect ratio */
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.two-column .info {
+    text-align: center;
+    line-height: 1;
+}
+
+
+
+
+
