--- a/static/style.css
+++ b/static/style.css
@@ -32,18 +32,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: Poppins, sans-serif;}
 }
 
 .two-column .w3-card-4 {
-    position: relative;
-    width: auto; /* Keep the card size unchanged */
-    height: 100%;
+    position: relative; /* without the position relative, the image will 
+                           position itself to the entire page */
+    width: auto; 
+    height: 100%; /* Set the height to auto to maintain aspect ratio */
     
 }
 
 .two-column .w3-card-4 img {
-    display: block;
-    max-width: 100%;
-    max-height: 70%; /* Maintain aspect ratio */
-    margin: auto;
-    position: absolute;
+    max-width: 250px; /* Set a maximum width for the image */
+    max-height: 250px; /* Set a maximum height for the image */
+    position: absolute; /* position absoulte made the image relate to w3-card-4 
+                           and position there */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
