--- a/templates/student_details.html
+++ b/templates/student_details.html
@@ -6,13 +6,42 @@
         <img src="{{ student[5][5] }}" alt="{{ student[1][1] }}">
     </div>
     <div class="info w3-card-4">
-        <h1>{{ student[1][1] }}</h1>
-        <h1>Age: {{ student[2][2] }}</h1>
-        <h1>Year: {{ student[3][3] }}</h1>
-        {% for course in student %}
-        <h3>Course: {{ course[10] }}</h3>
-        <h3>Teacher: {{ course[11] }}</h3>
-        {% endfor %}
+        <div class="student-info-table">
+            <table>
+                <tr>
+                    <th> Name </th>
+                    <td> {{ student[1][1] }} </td>
+                </tr>
+                <tr>
+                    <th> Age </th>
+                    <td> {{ student[2][2] }} </td>
+                </tr>
+                <tr>
+                    <th> Year </th>
+                    <td> {{ student[3][3] }} </td>
+                </tr>
+        
+            </table>
+
+
+        </div>
+        <div class="courses-table">
+            <table>
+                <tr>
+                    <th colspan="2"> Courses </th>
+                </tr>
+                <tr>
+                    <th> <h3> <strong> Course </strong> </h3> </th>
+                    <th> <h3> <strong> Teacher </strong> </h3> </th>
+                </tr>
+                {% for course in student %}
+                <tr>
+                    <td> <h3>{{ course[10] }}</h3> </td>
+                    <td> <h3>{{ course[11] }}</h3> </td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
     </div>
 </div>
 
