--- a/static/style.css
+++ b/static/style.css
@@ -110,5 +110,50 @@ body,h1,h2,h3,h4,h5,h6 {font-family: Poppins, sans-serif;}
    
 }
 
+.btn {
+    font-size: 15px;
+    font-weight: 700;
+    padding: 10px 20px; 
+    background-color: rgb(218, 38, 38);
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 10rem;
+    z-index: 2;
+
+    transition: all 0.4s;
+
+    
+}
+
+.btn:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    
+    
+}
+
+/* image slideshow css */
+/* This is how you can create a slideshow using CSS animations without using JavaScript. 
+   The images will change every 5 seconds. 
+.slideshow {
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    animation: slideshow 30s ease-in-out infinite;
+    z-index: -1;
+    }
+
+@keyframes slideshow {
+    0% { background-image: url('/static/images/Image1.jpeg'); }
+    25% { background-image: url('/static/images/Image2.avif'); }
+    50% { background-image: url('/static/images/Image3.jpeg'); }
+    75% { background-image: url('/static/images/Image4.jpeg'); }
+    100% { background-image: url('/static/images/Image1.jpeg'); }
+} */
+
+
+
 
 
