--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,12 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<h1>Home Page</h1>
+
+<!--<div class="slideshow"> -->
+
+<button class="btn">Learn More</button>
+
+
+
 
 {% endblock %}
