--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <nav class="w3-bar w3-black">
+    <nav class="w3-bar">
         <h1><a href="/" class="w3-bar-item w3-button" >Home</a></h1>
         <h1><a href="/admin" class="w3-bar-item w3-button" >Admin</a></h1>
     </nav>
