a form to sign up with

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,16 @@
 {% extends "layout.html" %}
 {% block body %}
 
+<h1> signup </h1>
+
+<!-- A form to signup with -->
+<!-- the ACTION is the route we try to post to! -->
+ <form action="/signup" method="post">
+    <label for="username">Username</label>
+    <input type="text" name="username">
+    <label for="password">Password</label>
+    <input type="password" name="password">
+    <button type="submit">Signup</button>
+</form>
+
 {% endblock %}
