added div class = signup

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,12 +5,13 @@
 
 <!-- A form to signup with -->
 <!-- the ACTION is the route we try to post to! -->
- <form action="/signup" method="post">
-    <label for="username">Username</label>
-    <input type="text" name="username">
-    <label for="password">Password</label>
-    <input type="password" name="password">
-    <button type="submit">Signup</button>
-</form>
-
+<div class = "signup">
+    <form action="/signup" method="post">
+        <label for="username">Username</label>
+        <input type="text" name="username">
+        <label for="password">Password</label>
+        <input type="password" name="password">
+        <button type="submit">Signup</button>
+    </form>
+</div>
 {% endblock %}
