--- a/static/style.css
+++ b/static/style.css
@@ -153,6 +153,37 @@ body,h1,h2,h3,h4,h5,h6 {font-family: Poppins, sans-serif;}
     100% { background-image: url('/static/images/Image1.jpeg'); }
 } */
 
+/* login form css */
+.login form {
+    border: 3px solid #f1f1f1;
+    padding: 16px;
+    
+
+
+}
+
+.login {
+    display: flex;
+    justify-content: center;
+    margin-left: 50em;
+    width: 25em;
+    height: 16em;
+    line-height: 2em;
+    background-color: #f2f2f2;
+    font-family: Poppins, sans-serif;
+    
+
+}
+
+/* navigation bar css */
+.w3-bar .button-bar {
+    margin-left: 50em;
+}
+
+.w3-bar .w3-bar-item .logo {
+    margin-left: 5em;
+}
+
 
 
 
