--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,11 +12,32 @@
 <body>
 
     <nav class="w3-bar">
-        <h1><a href="/" class="w3-bar-item w3-button" >Home</a></h1>
-        <h1><a href="/admin" class="w3-bar-item w3-button" >Admin</a></h1>
+        <div class="w3-bar-item">
+            <div class="logo">
+                <h1> Logo </h1> 
+            </div>
+        </div>
+        <div class="button-bar">
+            <h1><a href="/" class="w3-bar-item w3-button" >Home</a></h1>
+            <h1><a href="/admin" class="w3-bar-item w3-button" >Admin</a></h1>
+            <h1><a href="/logout" class="w3-bar-item w3-button" >Log Out</a></h1>
+            <h1><a href="/signup" class="w3-bar-item w3-button" >Sign Up</a></h1>
+        </div>
     </nav>
 
     {% block body %}
     {% endblock %}
+
+     <!-- Add the message flashing so we can give the user some feedback about their login process -->
+     {% with messages = get_flashed_messages() %}
+     {% if messages %}
+     <ul>
+         {% for message in messages %}
+         <li>{{ message }}</li>
+         {% endfor %}
+     </ul>
+     {% endif %}
+     {% endwith %}
+
 </body>
 </html>
